--- a/app/src/main/res/layout/investigation_details_case_fragment.xml
+++ b/app/src/main/res/layout/investigation_details_case_fragment.xml
@@ -2,13 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center">
+    android:orientation="vertical">
 
     <com.my.app20160518.view.XListView
-        android:id="@+id/xListView_case_InvestigationCaseFragment"
+        android:id="@+id/xListView_InvestigationDetailsCaseFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scrollbars="none" />
+        android:layout_height="match_parent" />
 
 </LinearLayout>
