--- a/app/src/main/res/layout/investigation_of_feedback_activity.xml
+++ b/app/src/main/res/layout/investigation_of_feedback_activity.xml
@@ -4,18 +4,18 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <LinearLayout
-        android:id="@+id/ll_feedback"
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:background="#FFB5C5"
-        android:orientation="vertical" />
+    <!--<LinearLayout-->
+    <!--android:id="@+id/ll_feedback"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="80dp"-->
+    <!--android:background="#FFB5C5"-->
+    <!--android:orientation="vertical" />
+    android:layout_below="@id/ll_feedback"-->
 
     <FrameLayout
         android:id="@+id/frameLayout_InvestigationOfFeedbackAct"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/ll_feedback">
+        android:layout_height="wrap_content">
 
 
     </FrameLayout>
