--- a/app/src/main/res/layout/bank_fragment.xml
+++ b/app/src/main/res/layout/bank_fragment.xml
@@ -3,14 +3,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:gravity="center"
-    android:background="#CDC673">
+    android:background="#D1D1D1">
 
-    <TextView
-        android:layout_gravity="center"
-        android:text="银行Fragment"
-        android:textSize="30sp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <ListView
+        android:divider="#00000000"
+        android:id="@+id/lv_Bank_Fragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:scrollbars="none" />
 
 </LinearLayout>
