--- a/app/src/main/res/layout/staff_details_fragment.xml
+++ b/app/src/main/res/layout/staff_details_fragment.xml
@@ -17,5 +17,5 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tabs_StaffDetailsFragment"
-        tools:context=".StaffDetailsFragment" />
+        tools:context=".fragment.StaffDetailsFragment" />
 </LinearLayout>
