--- a/app/src/main/res/layout/xlistview_header.xml
+++ b/app/src/main/res/layout/xlistview_header.xml
@@ -28,17 +28,17 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="3dp">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="上次更新时间"
-                    android:textSize="12sp" />
+                <!--<TextView-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:text="上次更新时间"-->
+                <!--android:textSize="12sp" />-->
 
-                <TextView
-                    android:id="@+id/xlistview_header_time"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="12sp" />
+                <!--<TextView-->
+                <!--android:id="@+id/xlistview_header_time"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:textSize="12sp" />-->
             </LinearLayout>
         </LinearLayout>
 
