--- a/app/src/main/res/layout/bank_fragment_item.xml
+++ b/app/src/main/res/layout/bank_fragment_item.xml
@@ -5,98 +5,77 @@
     android:orientation="vertical">
 
     <LinearLayout
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginBottom="5dp"
-        android:layout_marginTop="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="5dp"
         android:background="@drawable/biankuang"
         android:orientation="vertical">
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/tv_name_BankFragment_item"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:orientation="horizontal">
+            android:layout_marginTop="10dp"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:text="姓名：张某某"
+            android:textSize="15sp" />
 
-            <TextView
-                android:textSize="15sp"
-                android:id="@+id/tv_name_BankFragment_item"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_weight="1"
-                android:paddingLeft="20dp"
-                android:text="姓名：张某某" />
+        <TextView
+            android:id="@+id/tv_Bank_Account_BankFragment_item"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:text="开户银行：中国工商银行"
+            android:textSize="15sp" />
 
-            <TextView
-                android:textSize="15sp"
-                android:id="@+id/tv_Bank_Account_BankFragment_item"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_weight="1"
-                android:paddingRight="20dp"
-                android:text="开户银行：中国工商银行" />
+        <TextView
+            android:id="@+id/tv_Account_Opening_BankFragment_item"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:text="开户账号：343405845"
+            android:textSize="15sp" />
 
-        </LinearLayout>
+        <TextView
+            android:id="@+id/tv_Opening_Time_BankFragment_item"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:text="开户时间：2016-5-20"
+            android:textSize="15sp" />
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/tv_Account_Balance_BankFragment_item"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:textSize="15sp"
+            android:text="账户余额:30万"
+             />
+
+        <TextView
+            android:id="@+id/tv_Account_Status_BankFragment_item"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:layout_marginTop="10dp"
-            android:orientation="horizontal">
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:textSize="15sp"
+            android:text="开户状态：冻结"
+             />
 
-            <TextView
-                android:textSize="15sp"
-                android:id="@+id/tv_Account_Opening_BankFragment_item"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_weight="1"
-                android:paddingLeft="20dp"
-                android:text="开户账号：343405845" />
-
-            <TextView
-                android:textSize="15sp"
-                android:id="@+id/tv_Opening_Time_BankFragment_item"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_weight="1"
-                android:paddingRight="20dp"
-                android:text="开户时间：2016-5-20" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:textSize="15sp"
-                android:id="@+id/tv_Account_Balance_BankFragment_item"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_weight="1"
-                android:paddingLeft="20dp"
-                android:text="账户余额:30万" />
-
-            <TextView
-                android:textSize="15sp"
-                android:id="@+id/tv_Account_Status_BankFragment_item"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_weight="1"
-                android:paddingRight="20dp"
-                android:text="开户状态：冻结" />
-
-        </LinearLayout>
     </LinearLayout>
 </LinearLayout>
