--- a/app/src/main/res/layout/business_circles_fragment_item.xml
+++ b/app/src/main/res/layout/business_circles_fragment_item.xml
@@ -18,28 +18,41 @@
             android:id="@+id/tv_CompanyName_BusinessCirclesFragment_item"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="公司名称：杭州云书网络科技有限公司" />
+            android:layout_marginTop="10dp"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:textSize="15sp"
+            android:text="公司名称：杭州云书网络科技有限公司"/>
 
         <TextView
             android:id="@+id/tv_CompanyType_BusinessCirclesFragment_item"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
             android:layout_marginTop="10dp"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:textSize="15sp"
             android:text="公司类型：上市公司" />
 
         <TextView
             android:id="@+id/tv_Job_BusinessCirclesFragment_item"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:textSize="15sp"
             android:text="检查对象担任职务：公司董事主席" />
 
-
         <TextView
+            android:layout_marginBottom="10dp"
             android:id="@+id/tv_BusinessScope_BusinessCirclesFragment_item"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:textSize="15sp"
             android:text="经营范围：软件" />
 
     </LinearLayout>
