--- a/app/src/main/res/layout/aaa.xml
+++ b/app/src/main/res/layout/aaa.xml
@@ -2,32 +2,38 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center">
+    android:gravity="center"
+    android:orientation="vertical">
 
-   <LinearLayout
-       android:id="@+id/ll"
-       android:layout_marginRight="80dp"
-       android:layout_marginLeft="80dp"
-       android:layout_width="match_parent"
-       android:orientation="vertical"
-       android:layout_height="wrap_content">
+    <LinearLayout
+        android:id="@+id/ll"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="80dp"
+        android:layout_marginRight="80dp"
+        android:orientation="vertical">
 
-       <View
-           android:id="@+id/view1"
-           android:background="#FFA07A"
-           android:layout_width="300dp"
-           android:layout_height="30dp"/>
+        <!--<View-->
+            <!--android:id="@+id/view1"-->
+            <!--android:layout_width="300dp"-->
+            <!--android:layout_height="30dp"-->
+            <!--android:background="#FFA07A" />-->
 
-       <View
-           android:id="@+id/view2"
-           android:layout_marginTop="30dp"
-           android:background="#FFB6C1"
-           android:layout_width="30dp"
-           android:layout_height="30dp"/>
+        <View
+            android:id="@+id/view2"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginTop="30dp"
+            android:background="@drawable/bar_biankuang" />
 
-   </LinearLayout>
+        <!--<com.my.app20160518.view.BarChartView-->
+            <!--android:id="@+id/bar"-->
+            <!--android:background="#FFB6C1"-->
+            <!--android:layout_width="30dp"-->
+            <!--android:layout_height="30dp"-->
+            <!--android:layout_marginTop="30dp"/>-->
 
+    </LinearLayout>
 
 
 </LinearLayout>
