--- a/app/src/main/res/layout/investigation_of_feedback_activity.xml
+++ b/app/src/main/res/layout/investigation_of_feedback_activity.xml
@@ -15,7 +15,7 @@
     <FrameLayout
         android:id="@+id/frameLayout_InvestigationOfFeedbackAct"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
 
     </FrameLayout>
